--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
 </head>
 
 <body bgcolor="#202040">
-<div class="top_bar fadeIn fadeIn-1s fadeIn-Delay-50ms"></div>
-<div class="ASA_Header fadeIn fadeIn-1s fadeIn-Delay-50ms">  GAUSIAN ASA</div>
-<div class="Sign_Header fadeIn fadeIn-1s fadeIn-Delay-50ms">  Developers Sign up / Log in</div>
-<div class="main_navigator fadeIn fadeIn-1s"></div>
+<div class="top_bar fadeIn fadeIn-100ms fadeIn-Delay-50ms"></div>
+<div class="ASA_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">  GAUSIAN ASA</div>
+<div class="Sign_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">  Developers Sign up / Log in</div>
+<div class="main_navigator fadeIn fadeIn-100ms">
+  <p class="navigator_blank"></p>
+  <h1>What is ASA</h1>
+  <h1>How it works</h1>
+        <h2>User APPS</h2>
+        <h2>ASA Exchanger</h2>
+        <h2>Service APPS</h2>
+  <h1>All service APPs</h1>
+  <h1>Get started</h1>
+</div>
 <div class="body_container"> 
-	<img class="fadeIn fadeIn-1s fadeIn-Delay-50ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt=""/>
-    <h1 class="fadeIn fadeIn-1s fadeIn-Delay-100ms">ASA Nebula</h1>
-    <h2 class="fadeIn fadeIn-1s fadeIn-Delay-100ms">where APPs "All for one, one for all."</h2>
-    <p class="fadeIn fadeIn-1s fadeIn-Delay-100ms">ASA Status at 13:51PM 01/25/2015 </p>
+	<img class="fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt=""/>
+    <h1 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">APP Serve APP</h1>  
+    <h2 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">where APPs "All for one, one for all."</h2>
+    <h3 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">ASA Nebula</h3>
+    <p class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">Real Time Status at PCT 13:51PM 01/25/2015 </p>
 </div>
 
 </body>
