--- a/index.html
+++ b/index.html
@@ -14,16 +14,26 @@
   <p class="navigator_blank"></p>
   <h1>What is ASA</h1>
   <h1>How it works</h1>
+        <h2>User APPs</h2>
+        <h2>ASA Exchanger</h2>
+        <h2>Service APPs</h2>
+  <h1>All service APPs</h1>
         <h2>User APPS</h2>
         <h2>ASA Exchanger</h2>
         <h2>Service APPS</h2>
-  <h1>All service APPs</h1>
   <h1>Get started</h1>
+        <h2>Get Service</h2>
+        <h2>Subscribe</h2>
+        <h2>Pricing</h2>
+        <h2>Provide Service</h2>
+        <h2>Registrate</h2>
+        <h2>Earnings</h2>
+        
 </div>
 <div class="body_container"> 
 	<img class="fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt=""/>
-    <h1 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">APP Serve APP</h1>  
-    <h2 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">where APPs "All for one, one for all."</h2>
+    <h1 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">APP Serve APP,</h1>  
+    <h2 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">where APPs say "All for one, one for all."</h2>
     <h3 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">ASA Nebula</h3>
     <p class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">Real Time Status at PCT 13:51PM 01/25/2015 </p>
 </div>
