update home and how.html

--- a/index.html
+++ b/index.html
@@ -8,34 +8,52 @@
 
 <body bgcolor="#202040">
 <div class="top_bar fadeIn fadeIn-100ms fadeIn-Delay-50ms"></div>
-<div class="ASA_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">  GAUSIAN ASA</div>
-<div class="Sign_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">  Developers Sign up / Log in</div>
-<div class="main_navigator fadeIn fadeIn-100ms">
-  <p class="navigator_blank"></p>
-  <h1>What is ASA</h1>
-  <h1>How it works</h1>
-        <h2>User APPs</h2>
-        <h2>ASA Exchanger</h2>
-        <h2>Service APPs</h2>
-  <h1>All service APPs</h1>
-        <h2>User APPS</h2>
-        <h2>ASA Exchanger</h2>
-        <h2>Service APPS</h2>
-  <h1>Get started</h1>
-        <h2>Get Service</h2>
-        <h2>Subscribe</h2>
-        <h2>Pricing</h2>
-        <h2>Provide Service</h2>
-        <h2>Registrate</h2>
-        <h2>Earnings</h2>
-        
-</div>
-<div class="body_container"> 
-	<img class="fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt=""/>
-    <h1 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">APP Serve APP,</h1>  
-    <h2 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">where APPs say "All for one, one for all."</h2>
-    <h3 class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">ASA Nebula</h3>
-    <p class="fadeIn fadeIn-100ms fadeIn-Delay-50ms">Real Time Status at PCT 13:51PM 01/25/2015 </p>
+
+<div class="ASA_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">  
+<a href="index.html">GAUSIAN ASA</a></div>
+
+<div class="Sign_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<a href="login.html">Developers Sign up / Log in</a></div>
+
+<div class="main_navigator"></div>
+<p class="navigator_blank"></p>
+<div class="main_navigator_h1 fadeIn fadeIn-100ms">
+<a href="how.html">What is ASA</a></div>
+<div class="main_navigator_h1 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<a href="how.html">How it works</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<a href="how.html">User APPs</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<a href="how.html">ASA Exchanger</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<a href="how.html">Service APPs</a></div>
+<div class="main_navigator_h1 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<a href="how.html">All service APPs</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-100ms">
+<a href="how.html">Find a service</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-100ms">
+<a href="how.html">Essential services</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-100ms">
+<a href="how.html">3rd Party services</a></div>
+<div class="main_navigator_h1 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
+<a href="how.html">Get started</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
+<a href="how.html">Get Service</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
+<a href="how.html">Pricing</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
+<a href="how.html">Provide Service</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
+<a href="how.html">Earnings</a></div>
+<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>
+
+
+<div class="body_container">
+<img class="fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt="ASA Nebula"/>
+<h1 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">APP Serve APP,</h1>  
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">where APPs say "All for one, one for all."</h2>
+<h3 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">ASA Nebula</h3>
+<p class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">Real Time Status at PCT 13:51PM 01/25/2015 </p>
 </div>
 
 </body>
