--- a/how.html
+++ b/how.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>GAUSIAN ASA</title>
+<title>ASA - How it works</title>
 <link href="style/main.css" rel="stylesheet" type="text/css">
 </head>
 
