create all pages

--- a/find_a_service.html
+++ b/find_a_service.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ASA - How it works</title>
+<title>ASA - Find a Service</title>
 <link href="style/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -18,7 +18,7 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1_selected">
+<div class="main_navigator_h1">
 <a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
@@ -28,7 +28,7 @@
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
+<div class="main_navigator_h2_selected">
 <a href="find_a_service.html">Find a Service</a></div>
 <div class="main_navigator_h2">
 <a href="essential_services.html">Essential Services</a></div>
@@ -47,8 +47,8 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">How it works</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">Bala...bala...</h2>
+<h1 class="fadeIn fadeIn-50ms">Find a Service</h1>  
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">...</h2>
 </div>
 
 </body>
