--- a/index.html
+++ b/index.html
@@ -7,53 +7,53 @@
 </head>
 
 <body bgcolor="#202040">
-<div class="top_bar fadeIn fadeIn-100ms fadeIn-Delay-50ms"></div>
+<div class="top_bar fadeIn fadeIn-50ms"></div>
 
-<div class="ASA_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">  
+<div class="ASA_Header fadeIn fadeIn-50ms">  
 <a href="index.html">GAUSIAN ASA</a></div>
 
-<div class="Sign_Header fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<div class="Sign_Header fadeIn fadeIn-50ms">
 <a href="login.html">Developers Sign up / Log in</a></div>
 
 <div class="main_navigator"></div>
 <p class="navigator_blank"></p>
-<div class="main_navigator_h1 fadeIn fadeIn-100ms">
-<a href="how.html">What is ASA</a></div>
-<div class="main_navigator_h1 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
+<div class="main_navigator_h1 fadeIn fadeIn-50ms">
+<a href="what.html">What is ASA</a></div>
+<div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
 <a href="how.html">How it works</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
-<a href="how.html">User APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
-<a href="how.html">ASA Exchanger</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
-<a href="how.html">Service APPs</a></div>
-<div class="main_navigator_h1 fadeIn fadeIn-100ms fadeIn-Delay-50ms">
-<a href="how.html">All service APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-100ms">
-<a href="how.html">Find a service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-100ms">
-<a href="how.html">Essential services</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-100ms">
-<a href="how.html">3rd Party services</a></div>
-<div class="main_navigator_h1 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
-<a href="how.html">Get started</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
-<a href="how.html">Get Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
-<a href="how.html">Pricing</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
-<a href="how.html">Provide Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-100ms fadeIn-Delay-150ms">
-<a href="how.html">Earnings</a></div>
-<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<a href="user_apps.html">User APPs</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<a href="asa_exchanger.html">ASA Exchanger</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<a href="service_apps.html">Service APPs</a></div>
+<div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<a href="all_service_apps.html">All Service APPs</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
+<a href="find_a_service.html">Find a Service</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
+<a href="essential_services.html">Essential Services</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
+<a href="3rd_party_services.html">3rd Party Services</a></div>
+<div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<a href="get_started.html">Get Started</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<a href="get_service.html">Get Service</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<a href="pricing.html">Pricing</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<a href="provide_service.html">Provide Service</a></div>
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<a href="earnings.html">Earnings</a></div>
+<!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="100%" alt="GAUSIAN logo"/></div>-->
 
 
 <div class="body_container">
 <img class="fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt="ASA Nebula"/>
-<h1 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">APP Serve APP,</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">where APPs say "All for one, one for all."</h2>
-<h3 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">ASA Nebula</h3>
-<p class="fadeIn fadeIn-50ms fadeIn-Delay-100ms">Real Time Status at PCT 13:51PM 01/25/2015 </p>
+<h1 class="fadeIn fadeIn-50ms">APP Serve APP,</h1>  
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">where APPs say "All for one, one for all."</h2>
+<h4 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">ASA Nebula</h3>
+<p class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">Real Time Visualization of ASA Network</p>
 </div>
 
 </body>
