--- a/service_apps.html
+++ b/service_apps.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ASA - How it works</title>
+<title>ASA - Service APPs</title>
 <link href="style/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -18,13 +18,13 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1_selected">
+<div class="main_navigator_h1">
 <a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
 <a href="asa_exchanger.html">ASA Exchanger</a></div>
-<div class="main_navigator_h2">
+<div class="main_navigator_h2_selected">
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
@@ -47,7 +47,7 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">How it works</h1>  
+<h1 class="fadeIn fadeIn-50ms">Service APPs</h1>  
 <h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">Bala...bala...</h2>
 </div>
 
