--- a/what.html
+++ b/what.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>ASA - How it works</title>
+<title>ASA - What is ASA</title>
 <link href="style/main.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -16,9 +16,9 @@
 
 <div class="main_navigator"> </div>
 <p class="navigator_blank"></p>
-<div class="main_navigator_h1">
-<a href="what.html">What is ASA</a></div>
 <div class="main_navigator_h1_selected">
+<a href="what.html">What is ASA</a></div>
+<div class="main_navigator_h1">
 <a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
@@ -47,8 +47,8 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">How it works</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">Bala...bala...</h2>
+<h1 class="fadeIn fadeIn-50ms">ASA - APP serve APP</h1>  
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">is where APPs exchange data & service to each other.</h2>
 </div>
 
 </body>
