update essential service page

--- a/essential_services.html
+++ b/essential_services.html
@@ -46,9 +46,12 @@
 <a href="earnings.html">Earnings</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">GAUSIAN Essential Services</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">...</h2>
+<div class="body_container fadeIn fadeIn-50ms"> 
+<h1>GAUSIAN Essential Service APPs</h1>  
+<p> 
+To make every APP running on GAUSIAN Desktop work with other, GAUSIAN maintains a group of <font color=#FFBB28>FREE</font> essential services to developers. Using these "Essential Services", developers's APP can access to user's data after necessary authorization. 
+</p>
+<img class="full_container_img fadeIn fadeIn-100ms" src="img/essential_service_background.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
 </div>
 
 </body>
