--- a/get_started.html
+++ b/get_started.html
@@ -46,9 +46,13 @@
 <a href="earnings.html">Earnings</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">Get Started</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">...</h2>
+<div class="body_container fadeIn fadeIn-50ms"> 
+<h1>Get Started</h1>
+<h2></h2>
+<h2>For User APPs</h2>
+<p> Suppose there should be a real-time chating box with example code. </p>
+<h2>For Service APPs</h2>
+<p> Suppose there should be a real-time chating box with example code. </p>
 </div>
 
 </body>
