--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -46,9 +46,9 @@
 <a href="earnings.html">Earnings</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">3rd Party Services</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">...</h2>
+<div class="body_container fadeIn fadeIn-50ms"> 
+<h1>3rd Party Services</h1>  
+<h2>APPs are welcome to get / provide data or service via ASA.</h2>
 </div>
 
 </body>
