--- a/how.html
+++ b/how.html
@@ -46,9 +46,8 @@
 <a href="earnings.html">Earnings</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">How it works</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">Bala...bala...</h2>
+<div class="body_container fadeIn fadeIn-50ms"> 
+<h1>How it works</h1>  
 </div>
 
 </body>
