--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
 
 
 <div class="body_container">
-<img class="fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt="ASA Nebula"/>
-<h1 class="fadeIn fadeIn-50ms">APP Serve APP,</h1>  
+<h1 class="fadeIn fadeIn-50ms">APP Serve APP,</h1>
 <h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">where APPs say "All for one, one for all."</h2>
 <h4 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">ASA Nebula</h3>
-<p class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">Real Time Visualization of ASA Network</p>
+<h5 class="fadeIn fadeIn-100ms fadeIn-Delay-100ms">Real Time Visualization of ASA Network</h5>
+<img class="full_container_img fadeIn fadeIn-150ms fadeIn-Delay-100ms" src="img/ASA_Nebula.jpg" width="100%" height="100%" alt="ASA Nebula"/>
 </div>
-
 </body>
 </html>
