--- a/provide_service.html
+++ b/provide_service.html
@@ -46,9 +46,9 @@
 <a href="earnings.html">Earnings</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">Provide Service through ASA</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">...</h2>
+<div class="body_container fadeIn fadeIn-50ms"> 
+<h1>Provide Service via ASA</h1>  
+<h2>To worldwide developers and enterprise users.</h2>
 </div>
 
 </body>
