update essential app page

--- a/essential_services.html
+++ b/essential_services.html
@@ -48,10 +48,47 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>GAUSIAN Essential Service APPs</h1>  
-<p> 
-To make every APP running on GAUSIAN Desktop work with other, GAUSIAN maintains a group of <font color=#FFBB28>FREE</font> essential services to developers. Using these "Essential Services", developers's APP can access to user's data after necessary authorization. 
-</p>
-<img class="full_container_img fadeIn fadeIn-100ms" src="img/essential_service_background.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
+<h2>You APP can access to user's data by using these service APPs after authorization.</h2>
+
+<a href="get_started.html"> <div class="main_essential_app customers">Customers</div> </a>
+<a href="get_started.html"> <div class="essential_app bills">Bills</div> </a>
+<a href="get_started.html"> <div class="essential_app recipts">Recipts</div> </a>
+<a href="get_started.html"> <div class="essential_app returns">Returns</div> </a>
+<a href="get_started.html"> <div class="essential_app refund">Refund</div> </a>
+<a href="get_started.html"> <div class="essential_app orders">Orders</div> </a>
+<a href="get_started.html"> <div class="essential_app quotes">Quotes</div> </a>
+
+<a href="get_started.html"> <div class="main_essential_app employees">Employee</div> </a>
+<a href="get_started.html"> <div class="essential_app payroll">Payroll</div> </a>
+<a href="get_started.html"> <div class="essential_app reimbursement">Reimbursement</div> </a>
+<a href="get_started.html"> <div class="essential_app agenda">Agenda</div> </a>
+<a href="get_started.html"> <div class="essential_app departments">Departments</div> </a>
+<a href="get_started.html"> <div class="essential_app jobs">Jobs</div> </a>
+
+<a href="get_started.html"> <div class="main_essential_app projects">Projects</div> </a>
+<a href="get_started.html"> <div class="essential_app keynotes">Keynotes</div> </a>
+
+<a href="get_started.html"> <div class="main_essential_app products">Products</div> </a>
+<a href="get_started.html"> <div class="essential_app parts">Parts</div> </a>
+<a href="get_started.html"> <div class="essential_app discounts">Discounts</div> </a>
+
+<a href="get_started.html"> <div class="main_essential_app vendors">Vendors</div> </a>
+<a href="get_started.html"> <div class="essential_app get_service">Get Service</div> </a>
+<a href="get_started.html"> <div class="essential_app purchase">Purchase</div> </a>
+
+<a href="get_started.html"> <div class="main_essential_app inventory">Inventory</div> </a>
+<a href="get_started.html"> <div class="essential_app warehouse">Warehouse</div> </a>
+<a href="get_started.html"> <div class="essential_app ship_in">Ship-In</div> </a>
+<a href="get_started.html"> <div class="essential_app ship_out">Ship-Out</div> </a>
+
+<a href="get_started.html"> <div class="main_essential_app bank_account">Account</div> </a>
+<a href="get_started.html"> <div class="essential_app transaction_in">Transaction In</div> </a>
+<a href="get_started.html"> <div class="essential_app transaction_out">Transaction Out</div> </a>
+
+<a href="get_started.html"> <div class="essential_app user">User Info</div> </a>
+<a href="get_started.html"> <div class="essential_app file">User File</div> </a>
+
+<img class="full_container_img fadeIn fadeIn-100ms fadeIn-Delay-50ms" src="img/essential_service_background.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
 </div>
 
 </body>
