--- a/get_started.html
+++ b/get_started.html
@@ -48,11 +48,8 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Get Started</h1>
-<h2></h2>
-<h2>For User APPs</h2>
-<p> Suppose there should be a real-time chating box with example code. </p>
-<h2>For Service APPs</h2>
-<p> Suppose there should be a real-time chating box with example code. </p>
+<h2>Try to chat with a Service APP here...</h2>
+
 </div>
 
 </body>
