--- a/get_service.html
+++ b/get_service.html
@@ -48,46 +48,7 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Get Service via ASA</h1>  
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
-<h2>From GAUSIAN & worldwide developers.</h2>
+<h2>From worldwide developers besides GAUSIAN.</h2>
 </div>
 
 </body>
