--- a/get_started.html
+++ b/get_started.html
@@ -49,7 +49,10 @@
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Get Started</h1>
 <h2>Try to chat with a Service APP here...</h2>
-
+<img class="full_container_img fadeIn fadeIn-50ms" src="img/chatting_system_1.png" width="100%" height="100%" alt="ASA Chatting System"/>
+<img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-50ms" src="img/chatting_system_2.png" width="100%" height="100%" alt="ASA Chatting System"/>
+<img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-100ms" src="img/chatting_system_3.png" width="100%" height="100%" alt="ASA Chatting System"/>
+<img class="full_container_img fadeIn fadeIn-Delay-150ms" src="img/chatting_system_4.png" width="100%" height="100%" alt="ASA Chatting System"/>
 </div>
 
 </body>
