update many pages

--- a/get_service.html
+++ b/get_service.html
@@ -18,8 +18,6 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1">
-<a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
@@ -28,8 +26,6 @@
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="find_a_service.html">Find a Service</a></div>
 <div class="main_navigator_h2">
 <a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2">
@@ -48,7 +44,26 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Get Service via ASA</h1>  
-<h2>From worldwide developers besides GAUSIAN.</h2>
+<h2>Get service from service-APPs by worldwide developers.</h2>
+<h2></h2>
+
+<h2>User-APP Development Flow</h2>
+<p>
+STEP.1  You need to have a look at the full list of service APPs and understand how many services you will use.<br> 
+STEP.2  You may try those services at "Get Started" page. <br>
+STEP.3  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Client_Dummy.js. <br>
+STEP.4  Use ASA_Client_Dummy.js in your project, so it provides ASA API and it always link to a "Dummy Company"<br>
+STEP.5  You are free to the "Dummy Company" to develop your user APPs. <br>
+</p>
+
+<h2>User-APP  Release Flow</h2>
+<p> 
+STEP.1  Log in as a GAUSIAN worldwide developer. <br>
+STEP.2  Upload source code of your User APP. <br>
+STEP.3  Input relevant informaiton like APP name, functions, price, suportted APP-link index, et al. <br>
+STEP.4  Wait for censorship and compatibility test.<br>
+STEP.5  Your user APP is available in GAUSIAN Store.<br>
+</p>
 </div>
 
 </body>
