--- a/index.html
+++ b/index.html
@@ -19,31 +19,27 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1 fadeIn fadeIn-50ms">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
-<a href="how.html">How it works</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms">
 <a href="user_apps.html">User APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms">
 <a href="asa_exchanger.html">ASA Exchanger</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms">
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
 <a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
-<a href="find_a_service.html">Find a Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
 <a href="essential_services.html">Essential Services</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
 <a href="3rd_party_services.html">3rd Party Services</a></div>
-<div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 <a href="get_started.html">Get Started</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 <a href="get_service.html">Get Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 <a href="pricing.html">Pricing</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 <a href="provide_service.html">Provide Service</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">
+<div class="main_navigator_h2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">
 <a href="earnings.html">Earnings</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="100%" alt="GAUSIAN logo"/></div>-->
 
