--- a/pricing.html
+++ b/pricing.html
@@ -18,8 +18,6 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1">
-<a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
@@ -28,8 +26,6 @@
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="find_a_service.html">Find a Service</a></div>
 <div class="main_navigator_h2">
 <a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2">
@@ -47,7 +43,12 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container fadeIn fadeIn-50ms"> 
-<h1>Some Services are Paid</h1>  
+<h1>Pricing</h1>
+<h2></h2>
+<h2>GAUSIAN Essential Service APPs are forever FREE.</h2>
+<p></p>
+<h2>Some 3rd Party Service APPs are PAID.</h2>
+<p></p>
 </div>
 
 </body>
