--- a/provide_service.html
+++ b/provide_service.html
@@ -18,8 +18,6 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1">
-<a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
@@ -28,8 +26,6 @@
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="find_a_service.html">Find a Service</a></div>
 <div class="main_navigator_h2">
 <a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2">
@@ -48,7 +44,27 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Provide Service via ASA</h1>  
-<h2>To worldwide developers and enterprise users.</h2>
+<h2>Provide service to worldwide user-APPs.</h2>
+<h2></h2>
+
+<h2>Service-APP Development Flow</h2>
+<p>
+STEP.1  Have an idea that what kind of service you want to provide. It'd better be creative.<br> 
+STEP.2  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Server_Dummy.php. <br>
+STEP.3  ASA_Server_Dummy.php in your project, so it provides ASA API and it always link to a "Dummy Company" database<br>
+STEP.4  Upload your service PHP to ASA server. <br>
+STEP.5  You are free to try your service at "Get Started" page and it is in the "Testing" tab. <br>
+</p>
+
+<h2>Service-APP Release Flow</h2>
+<p> 
+STEP.1  Log in as a GAUSIAN worldwide developer. <br>
+STEP.2  Upload PHP source code of your service APP. <br>
+STEP.3  Input relevant informaiton like APP name, functions, API documents, User-APP example codes, price, et al. <br>
+STEP.4  Wait for censorship and compatibility test.<br>
+STEP.5  Your service APP is released.<br>
+STEP.6  You can try it in "Get Started" page and it is in the "Released" tab.<br>
+</p>
 </div>
 
 </body>
