--- a/what.html
+++ b/what.html
@@ -18,8 +18,6 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1_selected">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h1">
-<a href="how.html">How it works</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
@@ -28,8 +26,6 @@
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h1">
 <a href="all_service_apps.html">All Service APPs</a></div>
-<div class="main_navigator_h2">
-<a href="find_a_service.html">Find a Service</a></div>
 <div class="main_navigator_h2">
 <a href="essential_services.html">Essential Services</a></div>
 <div class="main_navigator_h2">
@@ -48,7 +44,7 @@
 
 <div class="body_container"> 
 <h1 class="fadeIn fadeIn-50ms">ASA - APP serve APP</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">is where APPs exchange data & service to each other.</h2>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms">is where software exchange data & service to each other.</h2>
 </div>
 
 </body>
