update essential service page

--- a/essential_services.html
+++ b/essential_services.html
@@ -44,7 +44,7 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>GAUSIAN Essential Service APPs</h1>  
-<h2>You APP can access to user's data by using these service APPs after authorization.</h2>
+<h2>This is how your user-APP access into one company after authorization.</h2>
 
 <a href="get_started.html"> <div class="main_essential_app customers">Customers</div> </a>
 <a href="get_started.html"> <div class="essential_app bills">Bills</div> </a>
