update provide service page

--- a/provide_service.html
+++ b/provide_service.html
@@ -49,9 +49,9 @@
 
 <h2>Service-APP Development Flow</h2>
 <p>
-STEP.1  Have an idea that what kind of service you want to provide. It'd better be creative.<br> 
+STEP.1  Have an idea that what service you want to provide. It'd better be creative.<br> 
 STEP.2  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Server_Dummy.php. <br>
-STEP.3  ASA_Server_Dummy.php in your project, so it provides ASA API and it always link to a "Dummy Company" database<br>
+STEP.3  ASA_Server_Dummy.php in your project, so it provides ASA API and it always link to a "Dummy Company" database.<br>
 STEP.4  Upload your service PHP to ASA server. <br>
 STEP.5  You are free to try your service at "Get Started" page and it is in the "Testing" tab. <br>
 </p>
