--- a/get_started.html
+++ b/get_started.html
@@ -21,35 +21,40 @@
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
-<a href="asa_exchanger.html">ASA Exchanger</a></div>
-<div class="main_navigator_h2">
 <a href="service_apps.html">Service APPs</a></div>
-<div class="main_navigator_h1">
-<a href="all_service_apps.html">All Service APPs</a></div>
 <div class="main_navigator_h2">
-<a href="essential_services.html">Essential Services</a></div>
-<div class="main_navigator_h2">
-<a href="3rd_party_services.html">3rd Party Services</a></div>
+<a href="asa_exchanger.html">ASA Exchanger</a></div>
+
 <div class="main_navigator_h1_selected">
 <a href="get_started.html">Get Started</a></div>
 <div class="main_navigator_h2">
 <a href="get_service.html">Get Service</a></div>
 <div class="main_navigator_h2">
-<a href="pricing.html">Pricing</a></div>
-<div class="main_navigator_h2">
 <a href="provide_service.html">Provide Service</a></div>
 <div class="main_navigator_h2">
-<a href="earnings.html">Earnings</a></div>
+<a href="business_model.html">Business Model</a></div>
+
+<div class="main_navigator_h1">
+<a href="all_service_apps.html">All Service APPs</a></div>
+<div class="main_navigator_h2">
+<a href="essential_services.html">Essential Ones</a></div>
+<div class="main_navigator_h2">
+<a href="3rd_party_services.html">Developer Ones</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container fadeIn fadeIn-50ms"> 
+<!-- <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Get Started</h1>
 <h2>Try to chat with a Service APP here...</h2>
 <img class="full_container_img fadeIn fadeIn-50ms" src="img/chatting_system_1.png" width="100%" height="100%" alt="ASA Chatting System"/>
 <img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-50ms" src="img/chatting_system_2.png" width="100%" height="100%" alt="ASA Chatting System"/>
 <img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-100ms" src="img/chatting_system_3.png" width="100%" height="100%" alt="ASA Chatting System"/>
 <img class="full_container_img fadeIn fadeIn-Delay-150ms" src="img/chatting_system_4.png" width="100%" height="100%" alt="ASA Chatting System"/>
+</div> -->
+<div class="body_container fadeIn fadeIn-50ms"> 
+	<iframe class="full_container_img" frameBorder="0"
+	src="http://gausian-developers.github.io/user-app-template4/app/index.html"></iframe>
 </div>
+
 
 </body>
 </html>
