--- a/service_apps.html
+++ b/service_apps.html
@@ -20,26 +20,27 @@
 <a href="what.html">What is ASA</a></div>
 <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
-<div class="main_navigator_h2">
-<a href="asa_exchanger.html">ASA Exchanger</a></div>
 <div class="main_navigator_h2_selected">
 <a href="service_apps.html">Service APPs</a></div>
-<div class="main_navigator_h1">
-<a href="all_service_apps.html">All Service APPs</a></div>
 <div class="main_navigator_h2">
-<a href="essential_services.html">Essential Services</a></div>
-<div class="main_navigator_h2">
-<a href="3rd_party_services.html">3rd Party Services</a></div>
+<a href="asa_exchanger.html">ASA Exchanger</a></div>
+
 <div class="main_navigator_h1">
 <a href="get_started.html">Get Started</a></div>
 <div class="main_navigator_h2">
 <a href="get_service.html">Get Service</a></div>
 <div class="main_navigator_h2">
-<a href="pricing.html">Pricing</a></div>
-<div class="main_navigator_h2">
 <a href="provide_service.html">Provide Service</a></div>
 <div class="main_navigator_h2">
-<a href="earnings.html">Earnings</a></div>
+<a href="business_model.html">Business Model</a></div>
+
+<div class="main_navigator_h1">
+<a href="all_service_apps.html">All Service APPs</a></div>
+<div class="main_navigator_h2">
+<a href="essential_services.html">Essential Ones</a></div>
+<div class="main_navigator_h2">
+<a href="3rd_party_services.html">Developer Ones</a></div>
+
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container fadeIn fadeIn-50ms"> 
