update font colors

--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -45,7 +45,7 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Developer Service APPs</h1>  
-<h2>From wordwide brilliant people</h2>
+<h2>By <span style="color: #FFBB28;">wordwide</span> brilliant people</h2>
 </div>
 
 </body>
