--- a/what.html
+++ b/what.html
@@ -43,8 +43,8 @@
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
 <div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">ASA - APP serve APP</h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms"><span style="color: #FFBB28;">ASA is where softwares exchange data & service to each other.</span></h2>
+<h1 class="fadeIn fadeIn-50ms">ASA <span style="font-size: 24pt;">APP serve APP</span></h1>  
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms"><span style="color: #FFBB28;">is how and where softwares exchange data & service to each other.</span></h2>
 </div>
 
 </body>
