update page contents

--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -46,6 +46,11 @@
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Developer Service APPs</h1>  
 <h2>By <span style="color: #FFBB28;">wordwide</span> brilliant people</h2>
+<p></p>
+<p>
+	Sorry,<br/>
+	this page is under development :)
+</p>
 </div>
 
 </body>
