--- a/get_service.html
+++ b/get_service.html
@@ -44,10 +44,9 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Get Service via ASA</h1>  
-<h2>Get service from service-APPs by worldwide developers.</h2>
 <h2></h2>
 
-<h2>User-APP Development Flow</h2>
+<h2>Get Started to Learn</h2>
 <p>
 STEP.1  You need to have a look at the full list of service APPs and understand how many services you will use.<br> 
 STEP.2  You may try those services at "Get Started" page. <br>
@@ -56,7 +55,16 @@ STEP.4  Use ASA_Client_Dummy.js in your project, so it provides ASA API and it a
 STEP.5  You are free to the "Dummy Company" to develop your user APPs. <br>
 </p>
 
-<h2>User-APP  Release Flow</h2>
+<h2>Get Started to Development</h2>
+<p>
+STEP.1  You need to have a look at the full list of service APPs and understand how many services you will use.<br> 
+STEP.2  You may try those services at "Get Started" page. <br>
+STEP.3  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Client_Dummy.js. <br>
+STEP.4  Use ASA_Client_Dummy.js in your project, so it provides ASA API and it always link to a "Dummy Company"<br>
+STEP.5  You are free to the "Dummy Company" to develop your user APPs. <br>
+</p>
+
+<h2>Release your user-APP</h2>
 <p> 
 STEP.1  Log in as a GAUSIAN worldwide developer. <br>
 STEP.2  Upload source code of your User APP. <br>
