--- a/provide_service.html
+++ b/provide_service.html
@@ -45,26 +45,10 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>Provide Service via ASA</h1>  
-<h2>Provide service to worldwide user-APPs.</h2>
-<h2></h2>
-
-<h2>Service-APP Development Flow</h2>
+<p></p>
 <p>
-STEP.1  Have an idea that what service you want to provide. It'd better be creative.<br> 
-STEP.2  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Server_Dummy.php. <br>
-STEP.3  ASA_Server_Dummy.php in your project, so it provides ASA API and it always link to a "Dummy Company" database.<br>
-STEP.4  Upload your service PHP to ASA server. <br>
-STEP.5  You are free to try your service at "Get Started" page and it is in the "Testing" tab. <br>
-</p>
-
-<h2>Service-APP Release Flow</h2>
-<p> 
-STEP.1  Log in as a GAUSIAN worldwide developer. <br>
-STEP.2  Upload PHP source code of your service APP. <br>
-STEP.3  Input relevant informaiton like APP name, functions, API documents, User-APP example codes, price, et al. <br>
-STEP.4  Wait for censorship and compatibility test.<br>
-STEP.5  Your service APP is released.<br>
-STEP.6  You can try it in "Get Started" page and it is in the "Released" tab.<br>
+	Sorry,<br/>
+	this page is under development :)
 </p>
 </div>
 
