update get started

--- a/get_started.html
+++ b/get_started.html
@@ -50,7 +50,7 @@
 <img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-100ms" src="img/chatting_system_3.png" width="100%" height="100%" alt="ASA Chatting System"/>
 <img class="full_container_img fadeIn fadeIn-Delay-150ms" src="img/chatting_system_4.png" width="100%" height="100%" alt="ASA Chatting System"/>
 </div> -->
-<div class="body_container fadeIn fadeIn-50ms"> 
+<div class="body_container_no_scroll fadeIn fadeIn-50ms"> 
 	<iframe class="full_container_img" frameBorder="0"
 	src="http://gausian-developers.github.io/user-app-template4/app/index.html"></iframe>
 </div>
