minor update of headers

--- a/3rd_party_services.html
+++ b/3rd_party_services.html
@@ -48,8 +48,7 @@
 <h2>By <span style="color: #FFBB28;">wordwide</span> brilliant people</h2>
 <p></p>
 <p>
-	Sorry,<br/>
-	this page is under development :)
+	Sorry, this page is under construction :(
 </p>
 </div>
 
