--- a/provide_service.html
+++ b/provide_service.html
@@ -47,8 +47,7 @@
 <h1>Provide Service via ASA</h1>  
 <p></p>
 <p>
-	Sorry,<br/>
-	this page is under development :)
+	Sorry, this page is under construction :(
 </p>
 </div>
 
