update what page

--- a/what.html
+++ b/what.html
@@ -42,10 +42,37 @@
 <a href="3rd_party_services.html">Developer Ones</a></div>
 <!--<div class="gausian_logo"><img src="img/GAUSIAN_logo.png" width="200px" alt="GAUSIAN logo"/></div>-->
 
-<div class="body_container"> 
-<h1 class="fadeIn fadeIn-50ms">ASA <span style="font-size: 24pt;">APP serve APP</span></h1>  
-<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms"><span style="color: #FFBB28;">is how and where softwares exchange data & service to each other.</span></h2>
-</div>
-
+<div class="body_container">
+<h1 class="fadeIn fadeIn-50ms">ASA <span style="font-size: 24pt;">APP serve APP</span></h1>
+<!-- <h2 class="fadeIn fadeIn-50ms fadeIn-Delay-20ms"><span style="color: #FFBB28;">is how and where softwares exchange data & service to each other.</span></h2> -->
+<p></p>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-50ms"><span style="color: #65cbfe">ASA Exchanger</span></h2>
+<p class="fadeIn fadeIn-50ms fadeIn-Delay-50ms"> 
+	<span style="color: #65cbfe">
+	ASA Exchanger is a central network service <br/> 
+	of GAUSIAN for data and service exchanging between <br/> 
+	worldwide APPs. <br/>
+	</span>
+</p>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-100ms"><span style="color: #fdb926">Service APPs</span></h2>
+<p class="fadeIn fadeIn-50ms fadeIn-Delay-100ms"> 
+	<span style="color: #fdb926">
+	Service APPs are hosted on servers <br/> 
+	to provide data and services like <br/>
+	"searching database of talented people", <br/>
+	"matching better vendors", <br/>
+	"tracking shipments"... <br/>
+	</span>	
+</p>
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"><span style="color: #84c83b">User APPs</span></h2>
+<p class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"> 
+	<span style="color: #84c83b">	
+	User APPs are run on client side. <br/>  
+	they can get data and service from ASA system. <br/> 
+	</span>		
+</p>
+<img class="full_container_img_nodrag fadeIn fadeIn-50ms fadeIn-Delay-150ms" src="img/what_userapp.png" height="100%" alt=""/>
+<img class="full_container_img_nodrag fadeIn fadeIn-50ms fadeIn-Delay-100ms" src="img/what_serviceapp.png" height="100%" alt=""/>
+<img class="full_container_img_nodrag fadeIn fadeIn-50ms fadeIn-Delay-50ms" src="img/what_asa.png" height="100%" alt=""/>
 </body>
 </html>
