--- a/business_model.html
+++ b/business_model.html
@@ -18,12 +18,12 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h2">
+<!-- <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h2">
-<a href="asa_exchanger.html">ASA Exchanger</a></div>
+<a href="asa_exchanger.html">ASA Exchanger</a></div> -->
 
 <div class="main_navigator_h1">
 <a href="get_started.html">Get Started</a></div>
@@ -45,6 +45,10 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>User-APP pays to Service-APP</h1> 
+<p></p>
+<p>
+	Sorry, this page is under construction :(
+</p>
 </div>
 
 </body>
