--- a/get_service.html
+++ b/get_service.html
@@ -18,12 +18,12 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h2">
+<!-- <div class="main_navigator_h2">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2">
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h2">
-<a href="asa_exchanger.html">ASA Exchanger</a></div>
+<a href="asa_exchanger.html">ASA Exchanger</a></div> -->
 
 <div class="main_navigator_h1">
 <a href="get_started.html">Get Started</a></div>
@@ -46,32 +46,42 @@
 <h1>Get Service via ASA</h1>  
 <h2></h2>
 
-<h2>Get Started to Learn</h2>
+<h2>How to Development</h2>
 <p>
-STEP.1  You need to have a look at the full list of service APPs and understand how many services you will use.<br> 
-STEP.2  You may try those services at "Get Started" page. <br>
-STEP.3  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Client_Dummy.js. <br>
-STEP.4  Use ASA_Client_Dummy.js in your project, so it provides ASA API and it always link to a "Dummy Company"<br>
-STEP.5  You are free to the "Dummy Company" to develop your user APPs. <br>
+	<br>
+	Welcome to GAUSIAN. Developing User APP on GAUSIAN Desktop is simple. <br>
+	<br> 
+	STEP.1: <br>
+	Please go to 
+	<a href="https://github.com/gausian-developers" target="_blank">
+		<span style="color: #FFBB28;">
+		https://github.com/gausian-developers 
+		</span>
+	</a>
+	to clone a User APP template. <br>
+	In the template,we showed a simple example of how to integrate ASA request into your User APP based on Angular. <br>
+	<br> 
+	STEP.2: <br>
+	Please have a look at the 
+	<a href="all_service_apps.html" target="_blank">
+		<span style="color: #FFBB28;">
+		full list of service APPs
+		</span>
+	</a>
+	and think about how many services you will use for your User APP development. <br>
+	<br> 
+	STEP.4: <br>
+	Read APIs of the service APPs you need to use and try to talk to them 
+	<a href="get_started.html" target="_blank">
+		<span style="color: #FFBB28;">
+		here.<br>
+		</span>
+	</a>
+	<br>
+	STEP.5: <br>
+	Integrate those talking into your user APP.<br>
 </p>
 
-<h2>Get Started to Development</h2>
-<p>
-STEP.1  You need to have a look at the full list of service APPs and understand how many services you will use.<br> 
-STEP.2  You may try those services at "Get Started" page. <br>
-STEP.3  Sign up as a GAUSIAN worldwide developer, and download GAUSIAN's ASA_Client_Dummy.js. <br>
-STEP.4  Use ASA_Client_Dummy.js in your project, so it provides ASA API and it always link to a "Dummy Company"<br>
-STEP.5  You are free to the "Dummy Company" to develop your user APPs. <br>
-</p>
-
-<h2>Release your user-APP</h2>
-<p> 
-STEP.1  Log in as a GAUSIAN worldwide developer. <br>
-STEP.2  Upload source code of your User APP. <br>
-STEP.3  Input relevant informaiton like APP name, functions, price, suportted APP-link index, et al. <br>
-STEP.4  Wait for censorship and compatibility test.<br>
-STEP.5  Your user APP is available in GAUSIAN Store.<br>
-</p>
 </div>
 
 </body>
