--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <p class="navigator_blank"></p>
 <div class="main_navigator_h1 fadeIn fadeIn-50ms">
 <a href="what.html">What is ASA</a></div>
-<div class="main_navigator_h2 fadeIn fadeIn-50ms">
+<!-- <div class="main_navigator_h2 fadeIn fadeIn-50ms">
 <a href="user_apps.html">User APPs</a></div>
 <div class="main_navigator_h2 fadeIn fadeIn-50ms">
 <a href="service_apps.html">Service APPs</a></div>
 <div class="main_navigator_h2 fadeIn fadeIn-50ms">
-<a href="asa_exchanger.html">ASA Exchanger</a></div>
+<a href="asa_exchanger.html">ASA Exchanger</a></div> -->
 
 <div class="main_navigator_h1 fadeIn fadeIn-50ms fadeIn-Delay-50ms">
 <a href="get_started.html">Get Started</a></div>
