update all service page

--- a/all_service_apps.html
+++ b/all_service_apps.html
@@ -45,10 +45,59 @@
 
 <div class="body_container fadeIn fadeIn-50ms"> 
 <h1>All Service APPs</h1>
+
+<img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_1.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
+<img class="full_container_img fadeIn fadeIn-50ms fadeIn-Delay-200ms" src="img/all_service_2.png" width="100%" height="100%" alt="GAUSIAN Essential Service APP"/>
+
 <p></p>
-<p>
-	Sorry, this page is under construction :(
+
+<a href="essential_services.html">
+<h2 class=" fadeIn fadeIn-50ms fadeIn-Delay-100ms"><span style="color: #65cbfe">Essential Service APPs</span>
+</h2>
+<p class="fadeIn fadeIn-50ms fadeIn-Delay-100ms"> 
+	<span style="color: #65cbfe">
+	Essential Services are provided by GAUSIAN for free.<br/> 
+	They are designed for basic info sharing like the info of "Customers",<br/> 
+	"Employees", "Products", "Inventory", "Orders" and all.<br/>
+	After rigorious censorship and user's authorization, <br/>
+	Our data serve your User APPs or Service APPs. <br/>
+	We work together for users. <br/>
+	</span>
 </p>
+</a>
+
+<a href="3rd_party_services.html">
+<h2 class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"><span style="color: #fdb926">Developer Service APPs</span>
+</h2>
+<p class="fadeIn fadeIn-50ms fadeIn-Delay-150ms"> 
+	<span style="color: #fdb926">
+	Developer Services are provided by worldwide<br/> 
+	brillent developers. These services focus on<br/>
+	advanced and creative servies like<br/>
+	"unified payment interface", <br/>
+	"matching better vendors", <br/>
+	"handeling transportation", <br/>
+	"sales channels", and so on. <br/>
+	Use your creativity! <br/>
+	</span>	
+</p>
+</a>
+
+<div class="all_service_exchanger"></div>
+<div class="all_service_exchanger_text">
+	<span style="font-size:5vh;">ASA</span><br>
+	Exchanger
+</div>
+
+<div class="all_service_essential_1 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+<div class="all_service_essential_2 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+<div class="all_service_essential_3 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+<div class="all_service_essential_4 fadeIn fadeIn-50ms fadeIn-Delay-100ms">E</div>
+
+<div class="all_service_developer_1 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+<div class="all_service_developer_2 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+<div class="all_service_developer_3 fadeIn fadeIn-50ms fadeIn-Delay-150ms">D</div>
+
 </div>
 
 </body>
